@@ -1,3 +1,9 @@
+2000-04-10  Philip Blundell <philb@gnu.org>
+ 
+ 	* arm-linux-nat.c (arm_skip_solib_resolver): Remove and move to
+ 	arm-linux-tdep.c.
+ 	* arm-linux-tdep.c (arm_skip_solib_resolver): New.
+ 
 Mon Apr 10 20:17:32 2000  Andrew Cagney  <cagney@b1.cygnus.com>
 
 	* TODO, NEWS: Update.  Mention MI.
